[package]
name = "smotrim-rss-proxy"
version = "0.1.3"
edition = "2021"
authors = ["Sergey <me@coyotle.ru>"]
license = "MIT"

[dependencies]
actix-web = "4"
chrono = "0.4"
chrono-tz = "0.10.1"
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
reqwest = "0.12.12"
lazy_static = "1.5.0"
serde_json = "1.0.138"
scraper = "0.22.0"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.6.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = true

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
